update edit post func and view

--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -26,7 +26,7 @@
 
         <ul class="list-group">
             {{#each data.posts}}
-            <a href="/blog/{{id}}?category={{category}}" class="list-group-item">{{title}}</a>
+            <a href="/blog/{{id}}" class="list-group-item">{{title}}</a>
             {{/each}}
         </ul>
         {{/if}}
