--- a/views/status-404.hbs
+++ b/views/status-404.hbs
@@ -4,9 +4,12 @@
         {{#if msg}}
         <div class="col-md-12 text-center">
             <br/><br/><br/>
-            <h1>{{msg.message_404}}</h1>
-            <h2>The page you requested does not exist.</h2> 
-            <img src="https://i.pinimg.com/564x/62/50/a4/6250a4353ead41c1c83e205b33f55776.jpg">
+            <div class="alert alert-info" role="alert">
+                <h3>{{msg.message_404}}</h3>
+                <br>
+               <a href="/blog"> go back to Blog Posts</a>
+            </div>
+
         </div>
         {{/if}}
     </div>
