--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-12">
 
-      <h2>Posts<a href="/posts/add" class="btn btn-success pull-right">Add Post</a></h2>
-      <hr>
+    <h2>Posts<a href="/posts/add" class="btn btn-success pull-right">Add Post</a></h2>
+    <hr>
 
     <div class="table-responsive">
 
@@ -17,25 +17,26 @@
           <td></td>
         </tr>
         {{#each posts}}
-            <tr>
-                <td>{{id}}</td>
-                <td><a href="/blog/{{id}}?category={{category}}">{{title}}</a></td>
-                <td>{{#formatDate postDate}}{{/formatDate}}</td>
-               <td><a style="text-decoration: none;" href="/posts?category={{category}}">{{category}}</td>
-                <td>{{published}}</td>
+        <tr>
+          <td>{{id}}</td>
+          <td><a href="/blog/{{id}}?category={{category}}">{{title}}</a></td>
+          <td>{{#formatDate postDate}}{{/formatDate}}</td>
+          <td><a style="text-decoration: none;" href="/posts?category={{category}}">{{category}}</td>
+          <td>{{published}}</td>
 
-                <td>
-                  <a href="posts/edit/{{id}}" class="btn btn-primary">edit</a>
-                  <a href="posts/delete/{{id}}" class="btn btn-danger">remove</a>
-                </td>
-            </tr>
-            {{/each}}
+          <td>
+            <a href="posts/edit/{{id}}" class="btn btn-primary">edit</a>
+            <a href="posts/delete/{{id}}" class="btn btn-danger">remove</a>
+          </td>
+        </tr>
+        {{/each}}
       </table>
     </div>
 
     {{#unless posts}} {{!if there's no posts}}
-    <div class="col-md-12 text-center">
-      <strong>{{message}}</strong>
+    <div class="alert alert-warning col-md-12 text-center" role="alert">
+      <h3>{{message}}</h3>
+      <p>Please try another Post / Category</p>
     </div>
     {{/unless}}
 
