--- a/views/userHistory.hbs
+++ b/views/userHistory.hbs
@@ -2,7 +2,7 @@
     <div class="col-md-12">
 
 
-          <h2>User ({{email}}) History</h2>
+          <h2>User ({{session.user.email}}) History</h2>
           <hr>
 
         <div class="table-responsive">
