--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Latest compiled and minified Bootstrap 3.4.1 CSS -->
-  <link rel="icon" href="/public/icon.jpg">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
     integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="icon" href="https://github.com/YKRogerWu/web322-app/blob/main/public/icon.jpg?raw=true">
 
   <title>Roger Wu's Blog🧩</title>
 </head>
